--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -175,6 +175,16 @@
        style="radio"
        toolbarPath="org.mwc.debrief.core.EditorView/viewRadio"/>  
 
+
+    <action
+       class="org.mwc.debrief.core.actions.DragSegment"
+       icon="icons/SelectSegment.png"
+       id="org.mwc.debrief.core.DragSegment"
+       label="Drag &amp;Track Segment"
+       menubarPath="org.mwc.debrief.core.EditorView/viewRadio"
+       style="radio"
+       toolbarPath="org.mwc.debrief.core.EditorView/viewRadio"/>  
+
          <action
                class="org.mwc.cmap.plotViewer.actions.ZoomOut"
                icon="icons/zoomout.gif"
