--- a/trunk/org.mwc.debrief.track_shift/build.properties
+++ b/trunk/org.mwc.debrief.track_shift/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               libs/jcommon-1.0.16.jar,\
+               libs/jfreechart-1.0.13.jar
