--- a/trunk/org.mwc.cmap.legacy/.classpath
+++ b/trunk/org.mwc.cmap.legacy/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="libs/jmf.jar"/>
 	<classpathentry kind="lib" path="libs/openmap.jar"/>
 	<classpathentry kind="lib" path="libs/vrml97.jar"/>
+	<classpathentry kind="lib" path="libs/jcommon-1.0.16.jar"/>
+	<classpathentry kind="lib" path="libs/jfreechart-1.0.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
