Shift the sample data over to a folder that gets copied to the top-level of the tgt directory
git-svn-id: http://subversion.assembla.com/svn/Debrief@2192 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.StaticResources/build.properties
+++ b/trunk/org.mwc.cmap.StaticResources/build.properties
@@ -1,9 +1,9 @@
 bin.includes = META-INF/,\
                library.jar,\
-               data/
+               root_installs/data/
 jars.compile.order = library.jar
 source.library.jar = src/               
 src.includes = src/
-bin.excludes = data/.svn/,\
-               data/.cvsignore
+bin.excludes = root_installs/data/.svn/,\
+               root_installs/data/.cvsignore
 
