--- a/trunk/org.mwc.cmap.core/.classpath
+++ b/trunk/org.mwc.cmap.core/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="libs/WMFWriter.jar"/>
 	<classpathentry kind="lib" path="libs/xstream-1.1.3.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/openmap.jar"/>
+	<classpathentry kind="lib" path="libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
