grid editor working beautifully
git-svn-id: http://subversion.assembla.com/svn/Debrief@2244 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.grideditor/plugin.xml
+++ b/trunk/org.mwc.cmap.grideditor/plugin.xml
@@ -7,7 +7,7 @@
       <view
             name="Grid Editor"
             icon="icons/chart.png"
-            category="com.pml.GridHarness"
+            category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.cmap.grideditor.GridEditorView"
             id="com.pml.grid.editor">
       </view>
