Very close now - able to view tracks in grid editor
git-svn-id: http://subversion.assembla.com/svn/Debrief@2247 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -94,6 +94,19 @@
      <initializer class="org.mwc.cmap.core.preferences.CoastlineSourcePreferenceInitializer"/>
   </extension>  
   
+	<extension point="org.eclipse.core.runtime.preferences">
+	 	<initializer class="org.mwc.cmap.gridharness.PreferenceInitializer"/>
+	 </extension>
+	 
+   <extension point="org.eclipse.ui.preferencePages">
+      <page
+            name="Formatting"
+            class="org.mwc.cmap.gridharness.LocationFormatPreferencePage"
+           category="org.mwc.cmap.core.preferences.CMAPPrefsPage"
+            id="org.mwc.cmap.gridharness.preferences.format">
+      </page>
+   </extension>  
+  
   <extension
         point="org.eclipse.ui.newWizards">
      <category
