--- a/trunk/org.mwc.cmap.core/build.properties
+++ b/trunk/org.mwc.cmap.core/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                cmap_core.jar,\
                icons/,\
                libs/WMFWriter.jar,\
-               libs/xstream-1.1.3.jar
+               libs/xstream-1.1.3.jar,\
+               libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar
 jars.compile.order = cmap_core.jar
 src.includes = icons/,\
                src/
