--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -17,6 +17,11 @@
       <library name="libs/xstream-1.1.3.jar">
          <export name="*"/>
       </library>
+      <library name="libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar">
+         <export
+               name="*">
+         </export>
+      </library>
    </runtime>
 
    <requires>
