--- a/trunk/org.mwc.cmap.StaticResources/build.properties
+++ b/trunk/org.mwc.cmap.StaticResources/build.properties
@@ -1,6 +1,5 @@
 bin.includes = META-INF/,\
-               library.jar,\
-               root_installs/data/
+               library.jar
 jars.compile.order = library.jar
 source.library.jar = src/               
 src.includes = src/
