remove lots of Feature update site URLs, couple of version updates, switch to 3.5 build
git-svn-id: http://subversion.assembla.com/svn/Debrief@2269 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/build.properties
+++ b/trunk/org.mwc.debrief.core/build.properties
@@ -9,8 +9,9 @@ bin.includes = plugin.xml,\
                plugin_customization.ini,\
                intro_content/
 generate.p2.metadata=true 
-p2.metadata.repo = file:${buildDirectory}/repo 
-p2.artifact.repo = file:${buildDirectory}/repo 
+p2.gathering=true
+p2.metadata.repo = file:${buildDirectory}/repository 
+p2.artifact.repo = file:${buildDirectory}/repostory 
 p2.metadata.repo.name = Debrief Metadata 
 p2.artifact.repo.name = Debrief Artifacts 
 p2.flavor = tooling 
