Include example of wildcards in file checking
git-svn-id: http://subversion.assembla.com/svn/Debrief@2282 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.installer/build.xml
+++ b/trunk/org.mwc.cmap.installer/build.xml
@@ -43,6 +43,14 @@
 				<available type="dir" file="${distDir}" />
 			</and>
 		</condition>
+		
+			<!-- here's how to do it in a way that allows wildcards...
+				<pathconvert property="cmap_present" setonempty="false" pathsep="/">
+					<path>
+						<fileset dir="${distDir}/features/" includes="org.mwc.cmap.combined.feature_1.0.*/**" />
+					</path>
+				</pathconvert> -->
+		
 		<condition property="eclipse_present">
 			<and>
 				<!-- first Debrief   -->
