--- a/trunk/org.mwc.cmap.grideditor/.classpath
+++ b/trunk/org.mwc.cmap.grideditor/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/jfreechart-1.0.13-swt.jar" sourcepath="/JFreeChart/src"/>
-	<classpathentry exported="true" kind="lib" path="lib/flanagan.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/jfreechart-1.0.13.jar" sourcepath="/Users/ianmayo/Downloads/jfreechart-1.0.13/source"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/jfreechart-1.0.13-swt.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/flanagan.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
