--- a/trunk/org.mwc.cmap.grideditor/build.properties
+++ b/trunk/org.mwc.cmap.grideditor/build.properties
@@ -3,12 +3,10 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               lib/flanagan.jar,\
+               libs/flanagan.jar,\
                plugin.xml,\
                icons/,\
-               lib/jcommon-1.0.16.jar,\
-               lib/jfreechart-1.0.13-swt.jar,\
-               lib/jfreechart-1.0.13.jar
+               libs/jfreechart-1.0.13-swt.jar
 src.includes = icons/,\
                plugin.xml,\
                plugin.properties
