--- a/trunk/org.mwc.cmap.legacy/.classpath
+++ b/trunk/org.mwc.cmap.legacy/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13-swt.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/jmf.jar"/>
@@ -8,5 +9,6 @@
 	<classpathentry kind="lib" path="libs/vrml97.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcommon-1.0.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13.jar" sourcepath="/Users/ianmayo/Downloads/jfreechart-1.0.13/source"/>
+	<classpathentry kind="lib" path="libs/flanagan.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
