--- a/trunk/org.mwc.debrief.legacy/.classpath
+++ b/trunk/org.mwc.debrief.legacy/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/jmf.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/vrml97.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/flanagan.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
