More fleshing out of generate infill, minor refactoring of supporting libs
git-svn-id: http://subversion.assembla.com/svn/Debrief@2291 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.grideditor/build.properties
+++ b/trunk/org.mwc.cmap.grideditor/build.properties
@@ -3,10 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               libs/flanagan.jar,\
                plugin.xml,\
-               icons/,\
-               libs/jfreechart-1.0.13-swt.jar
+               icons/
 src.includes = icons/,\
                plugin.xml,\
                plugin.properties
