--- a/trunk/org.mwc.cmap.core/build.properties
+++ b/trunk/org.mwc.cmap.core/build.properties
@@ -5,7 +5,8 @@ bin.includes = plugin.xml,\
                icons/,\
                libs/WMFWriter.jar,\
                libs/xstream-1.1.3.jar,\
-               libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar
+               libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar,\
+               libs/jfreechart-1.0.13-swt.jar
 jars.compile.order = cmap_core.jar
 src.includes = icons/,\
                src/
