--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -22,6 +22,11 @@
                name="*">
          </export>
       </library>
+      <library name="libs/jfreechart-1.0.13-swt.jar">
+         <export
+               name="*">
+         </export>
+      </library>
    </runtime>
 
    <requires>
