--- a/trunk/org.mwc.cmap.grideditor/.classpath
+++ b/trunk/org.mwc.cmap.grideditor/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/jfreechart-1.0.13.jar" sourcepath="/Users/ianmayo/Downloads/jfreechart-1.0.13/source"/>
-	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/jfreechart-1.0.13-swt.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/flanagan.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.core/libs/jfreechart-1.0.13-swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
