--- a/trunk/org.mwc.cmap.legacy/build.properties
+++ b/trunk/org.mwc.cmap.legacy/build.properties
@@ -5,8 +5,7 @@ bin.includes = plugin.xml,\
                META-INF/,\
                libs/jcommon-1.0.16.jar,\
                libs/jfreechart-1.0.13.jar,\
-               libs/flanagan.jar,\
-               libs/jfreechart-1.0.13-swt.jar
+               libs/flanagan.jar
 jars.compile.order = cmap_legacy.jar
 source.cmap_legacy.jar = src/
 src.includes = src/,\
