part way through implementation of absolute TMA segments, to let users just draw in tracks - without any sensor data
git-svn-id: http://subversion.assembla.com/svn/Debrief@2327 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.debrief.core"
    name="Debrief Core"
-   version="1.0.63"
+   version="1.0.64"
    provider-name="MWC"
    class="org.mwc.debrief.core.DebriefPlugin">
 
@@ -336,6 +336,15 @@
                icon="icons/line.gif"
                id="org.mwc.debrief.core.creators.shapes.InsertLine"
                label="&amp;Line"
+               menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
+               style="push"
+               toolbarPath="org.mwc.debrief.core.EditorShapes/shapes"/>
+
+         <action
+               class="org.mwc.debrief.core.creators.chartFeatures.InsertTrackSegment"
+               icon="icons/line.gif"
+               id="org.mwc.debrief.core.creators.chartFeatures.InsertLine"
+               label="&amp;Track Segment"
                menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
                style="push"
                toolbarPath="org.mwc.debrief.core.EditorShapes/shapes"/>
