absolute track segments pratcially sorted!
git-svn-id: http://subversion.assembla.com/svn/Debrief@2330 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -342,7 +342,7 @@
 
          <action
                class="org.mwc.debrief.core.creators.chartFeatures.InsertTrackSegment"
-               icon="icons/line.gif"
+               icon="icons/track_segment.gif"
                id="org.mwc.debrief.core.creators.chartFeatures.InsertLine"
                label="&amp;Track Segment"
                menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
