more progress with help
git-svn-id: http://subversion.assembla.com/svn/Debrief@2331 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.help/plugin.xml
+++ b/trunk/org.mwc.debrief.help/plugin.xml
@@ -225,7 +225,7 @@
             name="Combining sections of target track">
       </cheatsheet>
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_s2r"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_s2r"
             composite="true"
             contentFile="$nl$/cheat_sheets/S2R/GettingStartedComposite.xml"
             id="org.mwc.debrief.help.cheatsheet.s2r.composite"
