comment out aborted development of manual TMA generation
git-svn-id: http://subversion.assembla.com/svn/Debrief@2343 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -340,14 +340,14 @@
                style="push"
                toolbarPath="org.mwc.debrief.core.EditorShapes/shapes"/>
 
-         <action
+    <!--     <action
                class="org.mwc.debrief.core.creators.chartFeatures.InsertTrackSegment"
                icon="icons/track_segment.gif"
                id="org.mwc.debrief.core.creators.chartFeatures.InsertLine"
                label="&amp;Track Segment"
                menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
                style="push"
-               toolbarPath="org.mwc.debrief.core.EditorShapes/shapes"/>
+               toolbarPath="org.mwc.debrief.core.EditorShapes/shapes"/>  -->
                                                                            
          <action
                class="org.mwc.debrief.core.creators.shapes.AutoSelectTarget"
