Customize build properties with our local paths
git-svn-id: http://subversion.assembla.com/svn/Debrief@2368 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.build/build_release.properties
+++ b/trunk/org.mwc.debrief.build/build_release.properties
@@ -1,9 +1,9 @@
 eclipseLocation=C:/apps/eclipse-rcp-galileo-win32/eclipse
-buildDirectory=C:/dev/cmap4/deploy/out
+buildDirectory=C:/dev/cmap_35/deploy/out
 pluginPath=C:/apps/eclipse-3.5-delta-pack/eclipse
-path2jre=C:/apps/Java/jdk1.6.0_03/jre
+path2jre=C:/apps/jre6
 
-	pdeBuildPluginVersion=3.5.0.v20090527-1800
+pdeBuildPluginVersion=3.5.0.v20090527-1800
 equinoxLauncherPluginVersion=1.0.200.v20090520
 
 #The type of the top level element we are building,  generally "feature"
@@ -65,10 +65,18 @@ basearch=x86
 #this property indicates whether you want the set of plug-ins and features to be considered during the build to be limited to the ones reachable from the features / plugins being built
 filteredDependencyCheck=false
 
+# http://download.eclipse.org/eclipse/downloads/drops/S-3.5M3-200810301917
+# http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540
 skipBase=true
 eclipseURL=<url for eclipse download site>
 eclipseBuildId=<Id of Eclipse build to get>
 eclipseBaseURL=${eclipseURL}/eclipse-platform-${eclipseBuildId}-win32.zip
+
+
+# skipBase=true
+# eclipseURL=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540
+# eclipseBuildId=3.5
+# eclipseBaseURL=${eclipseURL}/eclipse-platform-${eclipseBuildId}-win32.zip
 
 logExtension=.log
 javacDebugInfo=false 
