Update versions, including tidying to Welcome page
git-svn-id: http://subversion.assembla.com/svn/Debrief@2374 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.debrief.core"
    name="Debrief Core"
-   version="1.0.64"
+   version="1.0.65"
    provider-name="MWC"
    class="org.mwc.debrief.core.DebriefPlugin">
 
@@ -435,7 +435,7 @@
         </property>
    		<property            
    				name="introTitle"
-            	value="Welcome to Debrief"/>
+            	value="Welcome to Debrief NG"/>
       <property
             name="introBrandingImage"
             value="product:icons/debrief_icon.gif"/>
