introduce Angle on The Bow (ATB) calc, offer in relevant places
git-svn-id: http://subversion.assembla.com/svn/Debrief@2387 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.tote/plugin.xml
+++ b/trunk/org.mwc.cmap.tote/plugin.xml
@@ -29,6 +29,10 @@
             name="Rel Brg"/>
    </extension>   
    <extension point="org.mwc.cmap.tote.ToteCalculation">
+      <calculation class="Debrief.Tools.Tote.Calculations.atbCalc"
+            name="ATB"/>
+   </extension>   
+   <extension point="org.mwc.cmap.tote.ToteCalculation">
       <calculation class="Debrief.Tools.Tote.Calculations.speedCalc"
             name="Speed"/>
    </extension>   
