--- a/trunk/org.mwc.debrief.build/build_release.properties
+++ b/trunk/org.mwc.debrief.build/build_release.properties
@@ -1,7 +1,7 @@
 eclipseLocation=C:/apps/eclipse-rcp-galileo-win32/eclipse
-buildDirectory=C:/dev/cmap_35/deploy/out
+buildDirectory=C:/dev/cmap4/deploy/out
 pluginPath=C:/apps/eclipse-3.5-delta-pack/eclipse
-path2jre=C:/apps/jre6
+path2jre=C:/apps/Java/jdk1.6.0_03/jre
 
 pdeBuildPluginVersion=3.5.0.v20090527-1800
 equinoxLauncherPluginVersion=1.0.200.v20090520
