Part way through hacking around legacy xml manipulation code (to remove legacy library dependencies)
git-svn-id: http://subversion.assembla.com/svn/Debrief@2435 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.legacy/.classpath
+++ b/trunk/org.mwc.asset.legacy/.classpath
@@ -4,12 +4,12 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="schemas"/>
-	<classpathentry kind="lib" path="libs/postgis_1.3.5.jar"/>
-	<classpathentry kind="lib" path="libs/postgresql-8.3-604.jdbc4.jar"/>
-	<classpathentry kind="lib" path="libs/jdom.jar"/>
-	<classpathentry kind="lib" path="libs/jaxen-full.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/postgis_1.3.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/postgresql-8.3-604.jdbc4.jar"/>
 	<classpathentry kind="lib" path="libs/saxpath.jar"/>
-	<classpathentry kind="lib" path="libs/xerces.jar"/>
+	<classpathentry kind="lib" path="libs/jaxen-full.jar"/>
+	<classpathentry kind="lib" path="libs/jdom.jar"/>
 	<classpathentry kind="lib" path="libs/parser.jar"/>
+	<classpathentry kind="lib" path="libs/xerces.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
