--- a/trunk/org.mwc.asset.legacy/build.properties
+++ b/trunk/org.mwc.asset.legacy/build.properties
@@ -1,6 +1,15 @@
 source.. = src/,\
-			schemas/
+           schemas/,\
+           libs/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               bin/
+               bin/,\
+               libs/,\
+               libs/jaxen-full.jar,\
+               libs/jdom.jar,\
+               libs/parser.jar,\
+               libs/postgis_1.3.5.jar,\
+               libs/postgresql-8.3-604.jdbc4.jar,\
+               libs/saxpath.jar,\
+               libs/xerces.jar
