switch to new icon
git-svn-id: http://subversion.assembla.com/svn/Debrief@2490 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.LiveDataMonitor/plugin.xml
+++ b/trunk/org.mwc.cmap.LiveDataMonitor/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.ui.views">
       <view
             name="Live Data"
-            icon="icons/sample.gif"
+            icon="icons/pulse.gif"
             category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.cmap.LiveDataMonitor.views.LiveDataMonitor"
             id="org.mwc.cmap.LiveDataMonitor">
