Fix help integration (looking at wrong toc)
git-svn-id: http://subversion.assembla.com/svn/Debrief@2492 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.help/plugin.xml
+++ b/trunk/org.mwc.asset.help/plugin.xml
@@ -6,7 +6,7 @@
          id="org.mwc.asset.help"
          point="org.eclipse.help.toc">
       <toc
-            file="html/legacy/toc2.xml"
+            file="html/legacy/toc.xml"
             primary="true">
       </toc>
    </extension>
