Lots more fleshing out
git-svn-id: http://subversion.assembla.com/svn/Debrief@2505 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -78,7 +78,7 @@
       </describer>
    	</content-type>
    <content-type base-type="org.eclipse.core.runtime.xml"
-                 file-extensions="xml"
+                 file-extensions="asset"
                  id="org.mwc.asset.contenttype.ScenarioFile"
                  name="ASSET Scenario File"
                  priority="normal">
