--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -77,12 +77,13 @@
          </parameter>
       </describer>
    	</content-type>
-   <content-type base-type="org.eclipse.core.runtime.xml"
-                 file-extensions="asset"
-                 id="org.mwc.asset.contenttype.ScenarioFile"
-                 name="ASSET Scenario File"
-                 priority="normal">
-      <describer class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber">
+   <content-type
+         base-type="org.eclipse.core.runtime.xml"
+         file-extensions="asset"
+         id="org.mwc.asset.contenttype.ScenarioFile"
+         name="ASSET Scenario File"
+         priority="normal">
+      <describer class="com.oxygenxml.editor.editors.xml.XMLContentDescriber">
          <parameter name="element"
                     value="Scenario">
          </parameter>
