Introduce minor comment to catalog definition
git-svn-id: http://subversion.assembla.com/svn/Debrief@2513 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -91,6 +91,7 @@
    	</content-type>
 	</extension>
    <extension
+         name="create a catalog entry for the ASSET schema"
          point="org.eclipse.wst.xml.core.catalogContributions">
       <catalogContribution>
          <public
@@ -100,6 +101,7 @@
          </public>
       </catalogContribution>
    </extension>
+
 	
 	   
    
