Update versions ready for new build
git-svn-id: http://subversion.assembla.com/svn/Debrief@2520 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.build/build_release_osx.properties
+++ b/trunk/org.mwc.debrief.build/build_release_osx.properties
@@ -1,10 +1,10 @@
-eclipseLocation=/Users/ianmayo/Applications/eclipse-SDK-3.5-macosx-cocoa-x86_64
+eclipseLocation=/Users/ianmayo/Applications/eclipse-SDK-3.5.1-macosx-cocoa-x86_64
 buildDirectory=/Users/ianmayo/dev/cmap_64/deploy/out
-pluginPath=/Users/ianmayo/Applications/eclipse-3.5-delta-pack
+pluginPath=/Users/ianmayo/Applications/eclipse-3.5.1-delta-pack
 path2jre=/System/Library/Frameworks/JavaVM.framework/Versions/Current
 
-pdeBuildPluginVersion=3.5.0.v20090527-1800
-equinoxLauncherPluginVersion=1.0.200.v20090520
+pdeBuildPluginVersion=3.5.1.R35x_20090820
+equinoxLauncherPluginVersion=1.0.201.R35x_v20090715
 
 #The type of the top level element we are building,  generally "feature"
 topLevelElementType = feature
