Comment out the catalog definition, since we're not currently including WST in the distribution
git-svn-id: http://subversion.assembla.com/svn/Debrief@2521 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -90,6 +90,7 @@
       </describer>
    	</content-type>
 	</extension>
+	<!--
    <extension
          name="create a catalog entry for the ASSET schema"
          point="org.eclipse.wst.xml.core.catalogContributions">
@@ -100,7 +101,7 @@
                uri="platform:/plugin/org.mwc.asset.legacy/schemas/ASSET.xsd">
          </public>
       </catalogContribution>
-   </extension>
+   </extension>  -->
 
 	
 	   
