fix build process for updated Eclipse version under Windows
git-svn-id: http://subversion.assembla.com/svn/Debrief@2535 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.build/build_release.properties
+++ b/trunk/org.mwc.debrief.build/build_release.properties
@@ -1,10 +1,10 @@
-eclipseLocation=C:/apps/eclipse-rcp-galileo-win32/eclipse
+eclipseLocation=C:/apps/eclipse-SDK-3.5.1-win32/eclipse
 buildDirectory=C:/dev/cmap5/deploy/out
-pluginPath=C:/apps/eclipse-3.5-delta-pack/eclipse
+pluginPath=C:/apps/eclipse-3.5.1-delta-pack/eclipse
 path2jre=C:/apps/Java/jdk1.6.0_03/jre
 
-pdeBuildPluginVersion=3.5.0.v20090527-1800
-equinoxLauncherPluginVersion=1.0.200.v20090520
+pdeBuildPluginVersion=3.5.1.R35x_20090820
+equinoxLauncherPluginVersion=1.0.201.R35x_v20090715
 
 #The type of the top level element we are building,  generally "feature"
 topLevelElementType = feature
