--- a/trunk/org.mwc.cmap.legacy/.classpath
+++ b/trunk/org.mwc.cmap.legacy/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="libs/openmap.jar"/>
 	<classpathentry kind="lib" path="libs/vrml97.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcommon-1.0.16.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13.jar" sourcepath="/Users/ianmayo/dev/jfreechart-1.0.13/source/"/>
+	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13.jar" sourcepath="/contribs/jfreechart/source"/>
 	<classpathentry kind="lib" path="libs/flanagan.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
