update version numbers
git-svn-id: http://subversion.assembla.com/svn/Debrief@2547 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.build/build_release.properties
+++ b/trunk/org.mwc.debrief.build/build_release.properties
@@ -1,7 +1,7 @@
-eclipseLocation=C:/apps/eclipse-SDK-3.5.1-win32/eclipse
-buildDirectory=C:/dev/cmap5/deploy/out
-pluginPath=C:/apps/eclipse-3.5.1-delta-pack/eclipse
-path2jre=C:/apps/Java/jdk1.6.0_03/jre
+eclipseLocation=d:/apps/eclipse-SDK-3.5.1-win32/eclipse
+buildDirectory=d:/dev/cmap/deploy/out
+pluginPath=d:/apps/eclipse-3.5.1-delta-pack/eclipse
+path2jre=C:\Program Files\Java\jdk1.6.0_16\jre
 
 pdeBuildPluginVersion=3.5.1.R35x_20090820
 equinoxLauncherPluginVersion=1.0.201.R35x_v20090715
